# TakeAPeek

./: .gitignore  README.md  app.js  demo.ipynb  feature_shift_analysis.ipynb  index.html  lora_bam_N1K5.yaml  lora_dcama_N1K5.yaml  lora_hdmnet_N1K5.yaml  main.py  preprocess.py  pyproject.toml  results.ipynb  scripts.sh  style.css  test.ipynb
parameters/: dcama_adapter_test.yaml  dcama_encoder_test.yaml  dcama_rank_test.yaml  dcama_test.yaml
parameters/coco/: bam_N2K5.yaml  bam_targets.yaml  dcama_N1K5.yaml  dcama_N2K5.yaml  dcama_ada_N1K5.yaml  dcama_ada_N2K5.yaml  fptrans.yaml  fptrans_N1K5.yaml  fptrans_N2K5.yaml  fptrans_ada_N1K5.yaml  fptrans_ada_N2K5.yaml  hdmnet_N1K5.yaml  hdmnet_N2K5.yaml  la_N1K5.yaml  la_N2K5.yaml
parameters/computation/: bam.yaml  dcama.yaml  dcama_ada.yaml  fptrans.yaml  fptrans_ada.yaml  hdmnet.yaml  la.yaml
parameters/cross/: deepglobe.yaml  deepglobe_decoder.yaml  isic.yaml  isic_decoder.yaml  lung.yaml  lung_decoder.yaml
parameters/decoder/: bam_N1K5.yaml  bam_N2K5.yaml  dcama_N1K5.yaml  dcama_N2K5.yaml  fptrans_N1K5.yaml  fptrans_N2K5.yaml  hdmnet_N1K5.yaml  hdmnet_N2K5.yaml  la_N1K5.yaml  la_N2K5.yaml
parameters/pascal/: bam_N1K5.yaml  bam_N2K5.yaml  dcama_N1K5.yaml  dcama_N2K5.yaml  dcama_ada_N1K5.yaml  dcama_ada_N2K5.yaml  fptrans_N1K5.yaml  fptrans_N2K5.yaml  fptrans_ada_N1K5.yaml  fptrans_ada_N2K5.yaml  hdmnet_N1K5.yaml  hdmnet_N2K5.yaml  la_N1K5.yaml  la_N2K5.yaml
parameters/preliminar/: bam_nits.yaml  dcama.yaml  dcama_N1K1.yaml  dcama_N1K2.yaml  dcama_ada_N1K1.yaml  dcama_ada_lrs.yaml  dcama_augment.yaml  dcama_decoder_N1K1.yaml  (+1 more)
results/: COCO_N1K5.csv  COCO_N2K5.csv  Pascal_N1K5.csv  Pascal_N2K5.csv  dcama.csv
slurm/: failed_sync.py  launch_lora  launch_lora_exe  launch_lora_multi_gpu  launch_lora_multi_gpu_exe  sync.py
tap/: __init__.py  adapters.py  computation.py  sample.py  substitutor.py  tap.py  validate.py
(+53 files in other folders)
