[project]
name = "takeapeek"
version = "0.1.0"
description = "Take a Peek"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "dropblock>=0.3.0",
    "easydict>=1.13",
    "einops>=0.8.1",
    "gdown>=5.2.0",
    "imageio>=2.37.0",
    "lovely-tensors>=0.1.18",
    "mmcv>=2.2.0",
    "notebook>=7.4.5",
    "pandas>=2.3.2",
    "peft>=0.15.2",
    "pycocotools>=2.0.8",
    "ruamel-yaml>=0.18.10",
    "scikit-learn>=1.6.1",
    "timm>=1.0.15",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchmetrics>=1.7.1",
    "torchvision>=0.21.0",
    "transformers>=4.51.3",
    "wandb==0.18.7",
]
